--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1,6 +1,7 @@
 @import url("//cdn.web-fonts.ge/fonts/bpg-nino-mtavruli/css/bpg-nino-mtavruli.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;700&display=swap");
 .header {
+  position: fixed;
   width: 100%;
   height: 140px;
   background-color: #1D1D1D;
@@ -8,6 +9,7 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
+  z-index: 999;
 }
 .header .uniLabImage {
   margin-right: 32px;
@@ -41,9 +43,10 @@
   width: 70%;
 }
 
+/* -- discovery -- */
 .discovery {
   padding-inline: 130px;
-  padding-top: 175px;
+  padding-top: 315px;
 }
 .discovery .discoveryContent {
   display: flex;
@@ -52,17 +55,17 @@
 .discovery .discoveryContent .discoveryNews {
   max-width: 870px;
   padding: 20px;
-  background-color: rgba(61, 105, 150, 0.1019607843);
+  background-color: rgba(61, 105, 150, 0.1);
   border-radius: 20px;
 }
-.discovery .discoveryContent .discoveryNews h2 {
+.discovery .discoveryContent .discoveryNews h1 {
   line-height: 74px;
   font-family: "BPG Nino Mtavruli", sans-serif;
   font-weight: 700;
   font-size: 64px;
   color: white;
 }
-.discovery .discoveryContent .discoveryNews h2 span {
+.discovery .discoveryContent .discoveryNews h1 span {
   background: -webkit-linear-gradient(90deg, #B9F272 -15%, #83F45E 126.67%);
   background-clip: text;
   -webkit-background-clip: text;
@@ -92,6 +95,7 @@
   font-weight: 700;
 }
 
+/* -- whoAmI -- */
 .whoAmI {
   padding-top: 250px;
   padding-inline: 200px;
@@ -104,7 +108,7 @@
 .whoAmI .whoAmI-content .figure1 {
   position: absolute;
   right: 0;
-  top: -120px;
+  top: -140px;
 }
 .whoAmI .whoAmI-content .figure2 {
   position: absolute;
@@ -114,7 +118,7 @@
 .whoAmI .whoAmI-content .whoAmI-text {
   width: 890px;
   padding: 20px;
-  background-color: rgba(61, 105, 150, 0.1019607843);
+  background-color: rgba(61, 105, 150, 0.1);
   border-radius: 20px;
 }
 .whoAmI .whoAmI-content .whoAmI-text h2 {
@@ -144,6 +148,7 @@
   font-weight: 700;
 }
 
+/* -- profile -- */
 .profile {
   padding-top: 250px;
   padding-inline: 200px;
@@ -155,7 +160,7 @@
 }
 .profile .profileContent .profileText {
   padding: 20px;
-  background-color: rgba(61, 105, 150, 0.1019607843);
+  background-color: rgba(61, 105, 150, 0.1);
   border-radius: 20px;
   width: 610px;
 }
@@ -195,12 +200,153 @@
   bottom: -120px;
 }
 
+/* creators */
+.creators {
+  padding-top: 250px;
+  padding-inline: 200px;
+  padding-bottom: 210px;
+}
+.creators .creators_title h2 {
+  font-family: "BPG Nino Mtavruli", sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  color: white;
+  margin-bottom: 95px;
+  text-align: center;
+}
+.creators .creators_container {
+  position: relative;
+  color: white;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  -moz-column-gap: 16px;
+       column-gap: 16px;
+}
+.creators .creators_container .creators_item {
+  padding: 32px 0 104px 0;
+  background: rgba(0, 16, 35, 0.4);
+  border-radius: 30px;
+  transition: 0.3s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.creators .creators_container .creators_item:hover {
+  background: rgba(0, 28, 62, 0.4);
+}
+.creators .creators_container .creators_item .creators_img {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 16px;
+}
+.creators .creators_container p {
+  width: 346px;
+  font-size: 24px;
+  line-height: 32px;
+  color: #fff;
+  font-family: "Noto Sans Georgian", sans-serif;
+  font-weight: 400;
+}
+.creators .creators_container h3 {
+  font-family: "BPG Nino Mtavruli", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  color: white;
+  margin-bottom: 32px;
+}
+.creators .figure4 {
+  right: 0;
+  position: absolute;
+  bottom: -120px;
+}
+
+/* narrative */
+.narrative {
+  position: relative;
+  display: flex;
+  justify-content: right;
+  padding-right: 200px;
+}
+.narrative .narrative-image {
+  position: absolute;
+  left: 15px;
+  top: 138px;
+}
+.narrative .narattive-container {
+  padding: 20px;
+  background-color: rgba(61, 105, 150, 0.1);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 1184px;
+}
+.narrative .narattive-container .narrative-item .narrative-icon {
+  width: 80px;
+  height: 80px;
+  background-color: rgba(0, 28, 62, 0.5);
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+.narrative .narattive-container .narrative-item h4 {
+  font-family: "BPG Nino Mtavruli", sans-serif;
+  font-weight: 700;
+  font-size: 32px;
+  color: white;
+  margin-bottom: 8px;
+}
+.narrative .narattive-container .narrative-item p {
+  font-size: 20px;
+  line-height: 40px;
+  color: #fff;
+  font-family: "Noto Sans Georgian", sans-serif;
+  font-weight: 400;
+  width: 370px;
+}
+
+.footer {
+  position: relative;
+  margin-top: 740px;
+  display: flex;
+  justify-content: space-evenly;
+  background-color: rgb(29, 29, 29);
+  padding: 70px 0;
+}
+.footer .figure5 {
+  position: absolute;
+  left: 200px;
+  top: -130px;
+}
+.footer h4 {
+  font-family: "BPG Nino Mtavruli", sans-serif;
+  font-weight: 700;
+  font-size: 32px;
+  color: white;
+  margin-bottom: 40px;
+}
+.footer p {
+  font-size: 20px;
+  line-height: 24px;
+  color: #fff;
+  font-family: "Noto Sans Georgian", sans-serif;
+  font-weight: 400;
+}
+.footer .contact div {
+  display: flex;
+  margin-top: 35px;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
