--- a/assets/styles/scss/components/_header.scss
+++ b/assets/styles/scss/components/_header.scss
@@ -1,10 +1,12 @@
 .header{
+    position: fixed;
     width: 100%;
     height: 140px;
     background-color: $bg-color;
     padding-inline: $padding-section;
     align-items: center;
     @include flex-spaceBetween;
+    z-index: 999;
 
     .uniLabImage{
         margin-right: 32px;
