--- a/assets/styles/scss/components/_main.scss
+++ b/assets/styles/scss/components/_main.scss
@@ -1,6 +1,7 @@
+/* -- discovery -- */
 .discovery{
     padding-inline: 130px;
-    padding-top: 175px;
+    padding-top: 315px;
 
     .discoveryContent{
         @include flex-spaceBetween;
@@ -9,9 +10,9 @@
             max-width: 870px;
             @include container;
 
-            h2{
+            h1{
                 line-height: 74px;
-                @include container-h2(64px);
+                @include container-h(64px);
 
                 span{
                     background: -webkit-linear-gradient(90deg, #B9F272 -15%, #83F45E 126.67%);
@@ -34,9 +35,9 @@
     }
 }
 
-
+/* -- whoAmI -- */
 .whoAmI{
-    padding-top: 250px;
+    padding-top: $padding-top;
     padding-inline: $padding-section;
     .whoAmI-content{
         @include flex-spaceBetween;
@@ -45,7 +46,7 @@
         .figure1{
             position: absolute;
             right: 0;
-            top: -120px;
+            top: -140px;
         }
 
         .figure2{
@@ -58,7 +59,7 @@
             @include container;
             h2{
                 margin-bottom: 80px;
-                @include container-h2(40px);
+                @include container-h(40px);
             }
             p{
                 @include container-p(48px);                
@@ -70,9 +71,9 @@
     }
 }
 
-
+/* -- profile -- */
 .profile{
-    padding-top: 250px;
+    padding-top: $padding-top;
     padding-inline: $padding-section;
 
     .profileContent{
@@ -111,13 +112,110 @@
                 }
             }
             h2{
-                @include container-h2(40px);
+                @include container-h(40px);
                 margin-bottom: 37px;
                 margin-left: 25px;
             }
         }
         .figure3{
             @include figure(-120px);
+        }
+    }
+}
+
+/* creators */
+
+.creators{
+    padding-top: $padding-top;
+    padding-inline: $padding-section;
+    padding-bottom: 210px;
+    .creators_title h2{
+        @include container-h(40px);
+        margin-bottom: 95px;
+        text-align: center;
+    }
+
+    .creators_container{
+        position: relative;
+        color: white;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 16px;
+
+        .creators_item{
+            padding: 32px 0 104px 0;
+            background: rgba(0, 16, 35, 0.4);
+            border-radius: 30px;
+            transition: .3s;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            &:hover{
+                background: rgba(0, 28, 62, 0.4);
+            }
+
+            .creators_img {
+                display: flex;
+                justify-content: center;
+                margin-bottom: 16px;
+            }
+        }
+
+        p{
+            width: 346px;
+            @include container-p(32px)
+        }
+        
+        h3{
+            @include container-h(36px);
+            margin-bottom: 32px;
+        }
+    }
+    .figure4{
+        right: 0;
+        @include figure(-120px);
+    }
+}
+
+/* narrative */
+
+.narrative{
+    position: relative;
+    display: flex;
+    justify-content: right;
+    padding-right: 200px;
+    .narrative-image{
+        position: absolute;
+        left: 15px;
+        top: 138px;
+    }
+    .narattive-container{
+        padding: 20px;
+        background-color: rgba(61, 105, 150, 0.1);
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        width: 1184px;
+        .narrative-item{
+            .narrative-icon{
+                width: 80px;
+                height: 80px;
+                background-color: rgba(0, 28, 62, 0.5);
+                border-radius: 20px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-bottom: 32px;
+            }
+
+            h4{
+                @include container-h(32px);
+                margin-bottom: 8px;
+            }
+
+            p{
+                @include container-p2(40px);
+                width: 370px;
+            }
         }
     }
 }
