--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -11,15 +11,15 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-}
-
-html{
+  }
+  
+  html{
     scroll-behavior: smooth;
-}
-
-body{
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/assets/images/background.jpg');
+  }
+  
+  body{
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../../../assets/images/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-}
+  }
