--- a/assets/styles/scss/components/_main.scss
+++ b/assets/styles/scss/components/_main.scss
@@ -1,3 +1,47 @@
+.background-image{
+    position: fixed;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../../../assets/images/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    width: 100%;
+    z-index: -1;
+}
+
+.message-square {
+    cursor: pointer;
+    --x:-1;
+    position: fixed;
+    z-index: 20;
+    width: 48px;
+    height: 40px;
+    border-radius: 5px;
+    background: linear-gradient(269.14deg, #B9F272 -29.08%, #83F45E 116.44%);
+    bottom: 96px;
+    right: 96px;
+    &:hover{
+        background: #82CC26;
+        &::before{
+            background: #82CC26;
+        }
+    }
+    &::before {
+        content: "";
+        position: absolute;
+        height: 20px;
+        width: 20px;
+        background: linear-gradient(269.14deg, #83F45E -29.08%, #B9F272 116.44%);
+        transform:scale(var(--x,1),var(--y,1));
+        bottom: -10px;
+        clip-path: polygon(0 0, 100% 0, 100% 100%);
+        z-index: -10;
+    }
+}
+
+  
+
+
 /* -- discovery -- */
 .discovery{
     padding-inline: 130px;
@@ -30,6 +74,9 @@
             }
             .discoveryBtn {
                 @include btn(96px 0 84px 0);
+                &:hover{
+                    background: linear-gradient(90deg, #82CC26 -15%, #82CC26 126.67%);
+                }
             }
         }
     }
@@ -57,6 +104,9 @@
         .whoAmI-text{
             width: 890px;
             @include container;
+            &:hover{
+                background-color: #3D699626;
+            }
             h2{
                 margin-bottom: 80px;
                 @include container-h(40px);
@@ -66,6 +116,9 @@
             }
             .whoAmIBtn{
                 @include btn(64px 0px 0px 0px);
+                &:hover{
+                    background: linear-gradient(90deg, #82CC26 -15%, #82CC26 126.67%);
+                }
             }
         }
     }
@@ -82,6 +135,12 @@
         .profileText{
             @include container;
             width: 610px;
+
+
+            &:hover{
+                background-color: #0B3D701A;
+            }
+
             .profileObject{
                 display: flex;
                 flex-direction: column;
@@ -118,31 +177,31 @@
             }
         }
         .figure3{
-            @include figure(-120px);
+            @include figure(-140px);
         }
     }
 }
 
-/* creators */
+/* communication */
 
-.creators{
+.communication{
     padding-top: $padding-top;
     padding-inline: $padding-section;
-    padding-bottom: 210px;
-    .creators_title h2{
+
+    .communication_title h2{
         @include container-h(40px);
         margin-bottom: 95px;
         text-align: center;
     }
 
-    .creators_container{
+    .communication_container{
         position: relative;
         color: white;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         column-gap: 16px;
 
-        .creators_item{
+        .communication_item{
             padding: 32px 0 104px 0;
             background: rgba(0, 16, 35, 0.4);
             border-radius: 30px;
@@ -150,14 +209,37 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            &:hover{
-                background: rgba(0, 28, 62, 0.4);
+            &:nth-child(1){
+                background: #001C3E66;
             }
-
-            .creators_img {
+            
+            .communication_img {
                 display: flex;
                 justify-content: center;
                 margin-bottom: 16px;
+                padding: 25px;
+                border-radius: 40px;
+                transition: 0.15s;
+
+                &.img-1{
+                    background-color: #3D96FF;
+                    &:hover{
+                        background-color: #346094;
+                    }
+                }
+                &.img-2{
+                    background-color: #03CAF5;
+                    &:hover{
+                        background-color: #1B92AB;
+                    }
+                }
+                &.img-3{
+                    background: linear-gradient(8.39deg, #B9F272 93.57%, rgba(131, 244, 94, 0) 159.27%);
+                    &:hover{
+                        background: linear-gradient(8.39deg, #7AB631 93.57%, rgba(131, 244, 94, 0) 159.27%);
+                    }
+                }
+
             }
         }
 
@@ -177,26 +259,40 @@
     }
 }
 
-/* narrative */
+/* creators */
 
-.narrative{
+.creators{
     position: relative;
     display: flex;
     justify-content: right;
     padding-right: 200px;
-    .narrative-image{
+    padding-top: 210px;
+    .creators-image{
+        padding-top: 210px;
         position: absolute;
         left: 15px;
         top: 138px;
     }
-    .narattive-container{
+    .creators-container{
+        z-index: 4;
         padding: 20px;
         background-color: rgba(61, 105, 150, 0.1);
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         width: 1184px;
-        .narrative-item{
-            .narrative-icon{
+        transition: 0.2s;
+        &:hover{
+            background: rgba(11, 61, 112, 0.1);
+            .creators-item{
+                .creators-icon{
+                        background-color: #164D914D;
+                        filter: hue-rotate(5deg) brightness(0.8) contrast(1.3);
+
+                }
+            }
+        }
+        .creators-item{
+            .creators-icon{
                 width: 80px;
                 height: 80px;
                 background-color: rgba(0, 28, 62, 0.5);
