--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1,5 +1,17 @@
 @import url("//cdn.web-fonts.ge/fonts/bpg-nino-mtavruli/css/bpg-nino-mtavruli.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 .header {
   position: fixed;
   width: 100%;
@@ -41,6 +53,48 @@
 }
 .header a:hover::before {
   width: 70%;
+}
+
+.background-image {
+  position: fixed;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../../../assets/images/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+  z-index: -1;
+}
+
+.message-square {
+  cursor: pointer;
+  --x:-1;
+  position: fixed;
+  z-index: 20;
+  width: 48px;
+  height: 40px;
+  border-radius: 5px;
+  background: linear-gradient(269.14deg, #B9F272 -29.08%, #83F45E 116.44%);
+  bottom: 96px;
+  right: 96px;
+}
+.message-square:hover {
+  background: #82CC26;
+}
+.message-square:hover::before {
+  background: #82CC26;
+}
+.message-square::before {
+  content: "";
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  background: linear-gradient(269.14deg, #83F45E -29.08%, #B9F272 116.44%);
+  transform: scale(var(--x, 1), var(--y, 1));
+  bottom: -10px;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%);
+          clip-path: polygon(0 0, 100% 0, 100% 100%);
+  z-index: -10;
 }
 
 /* -- discovery -- */
@@ -94,6 +148,9 @@
   font-family: "Noto Sans Georgian", sans-serif;
   font-weight: 700;
 }
+.discovery .discoveryContent .discoveryNews .discoveryBtn:hover {
+  background: linear-gradient(90deg, #82CC26 -15%, #82CC26 126.67%);
+}
 
 /* -- whoAmI -- */
 .whoAmI {
@@ -121,6 +178,9 @@
   background-color: rgba(61, 105, 150, 0.1);
   border-radius: 20px;
 }
+.whoAmI .whoAmI-content .whoAmI-text:hover {
+  background-color: rgba(61, 105, 150, 0.1490196078);
+}
 .whoAmI .whoAmI-content .whoAmI-text h2 {
   margin-bottom: 80px;
   font-family: "BPG Nino Mtavruli", sans-serif;
@@ -147,6 +207,9 @@
   font-family: "Noto Sans Georgian", sans-serif;
   font-weight: 700;
 }
+.whoAmI .whoAmI-content .whoAmI-text .whoAmIBtn:hover {
+  background: linear-gradient(90deg, #82CC26 -15%, #82CC26 126.67%);
+}
 
 /* -- profile -- */
 .profile {
@@ -163,6 +226,9 @@
   background-color: rgba(61, 105, 150, 0.1);
   border-radius: 20px;
   width: 610px;
+}
+.profile .profileContent .profileText:hover {
+  background-color: rgba(11, 61, 112, 0.1019607843);
 }
 .profile .profileContent .profileText .profileObject {
   display: flex;
@@ -197,16 +263,15 @@
 }
 .profile .profileContent .figure3 {
   position: absolute;
-  bottom: -120px;
+  bottom: -140px;
 }
 
-/* creators */
-.creators {
+/* communication */
+.communication {
   padding-top: 250px;
   padding-inline: 200px;
-  padding-bottom: 210px;
 }
-.creators .creators_title h2 {
+.communication .communication_title h2 {
   font-family: "BPG Nino Mtavruli", sans-serif;
   font-weight: 700;
   font-size: 40px;
@@ -214,7 +279,7 @@
   margin-bottom: 95px;
   text-align: center;
 }
-.creators .creators_container {
+.communication .communication_container {
   position: relative;
   color: white;
   display: grid;
@@ -222,7 +287,7 @@
   -moz-column-gap: 16px;
        column-gap: 16px;
 }
-.creators .creators_container .creators_item {
+.communication .communication_container .communication_item {
   padding: 32px 0 104px 0;
   background: rgba(0, 16, 35, 0.4);
   border-radius: 30px;
@@ -231,15 +296,36 @@
   flex-direction: column;
   align-items: center;
 }
-.creators .creators_container .creators_item:hover {
+.communication .communication_container .communication_item:nth-child(1) {
   background: rgba(0, 28, 62, 0.4);
 }
-.creators .creators_container .creators_item .creators_img {
+.communication .communication_container .communication_item .communication_img {
   display: flex;
   justify-content: center;
   margin-bottom: 16px;
+  padding: 25px;
+  border-radius: 40px;
+  transition: 0.15s;
 }
-.creators .creators_container p {
+.communication .communication_container .communication_item .communication_img.img-1 {
+  background-color: #3D96FF;
+}
+.communication .communication_container .communication_item .communication_img.img-1:hover {
+  background-color: #346094;
+}
+.communication .communication_container .communication_item .communication_img.img-2 {
+  background-color: #03CAF5;
+}
+.communication .communication_container .communication_item .communication_img.img-2:hover {
+  background-color: #1B92AB;
+}
+.communication .communication_container .communication_item .communication_img.img-3 {
+  background: linear-gradient(8.39deg, #B9F272 93.57%, rgba(131, 244, 94, 0) 159.27%);
+}
+.communication .communication_container .communication_item .communication_img.img-3:hover {
+  background: linear-gradient(8.39deg, #7AB631 93.57%, rgba(131, 244, 94, 0) 159.27%);
+}
+.communication .communication_container p {
   width: 346px;
   font-size: 24px;
   line-height: 32px;
@@ -247,39 +333,50 @@
   font-family: "Noto Sans Georgian", sans-serif;
   font-weight: 400;
 }
-.creators .creators_container h3 {
+.communication .communication_container h3 {
   font-family: "BPG Nino Mtavruli", sans-serif;
   font-weight: 700;
   font-size: 36px;
   color: white;
   margin-bottom: 32px;
 }
-.creators .figure4 {
+.communication .figure4 {
   right: 0;
   position: absolute;
   bottom: -120px;
 }
 
-/* narrative */
-.narrative {
+/* creators */
+.creators {
   position: relative;
   display: flex;
   justify-content: right;
   padding-right: 200px;
+  padding-top: 210px;
 }
-.narrative .narrative-image {
+.creators .creators-image {
+  padding-top: 210px;
   position: absolute;
   left: 15px;
   top: 138px;
 }
-.narrative .narattive-container {
+.creators .creators-container {
+  z-index: 4;
   padding: 20px;
   background-color: rgba(61, 105, 150, 0.1);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 1184px;
+  transition: 0.2s;
 }
-.narrative .narattive-container .narrative-item .narrative-icon {
+.creators .creators-container:hover {
+  background: rgba(11, 61, 112, 0.1);
+}
+.creators .creators-container:hover .creators-item .creators-icon {
+  background-color: rgba(22, 77, 145, 0.3019607843);
+  filter: hue-rotate(5deg) brightness(0.8) contrast(1.3);
+}
+.creators .creators-container .creators-item .creators-icon {
   width: 80px;
   height: 80px;
   background-color: rgba(0, 28, 62, 0.5);
@@ -289,14 +386,14 @@
   justify-content: center;
   margin-bottom: 32px;
 }
-.narrative .narattive-container .narrative-item h4 {
+.creators .creators-container .creators-item h4 {
   font-family: "BPG Nino Mtavruli", sans-serif;
   font-weight: 700;
   font-size: 32px;
   color: white;
   margin-bottom: 8px;
 }
-.narrative .narattive-container .narrative-item p {
+.creators .creators-container .creators-item p {
   font-size: 20px;
   line-height: 40px;
   color: #fff;
@@ -312,6 +409,12 @@
   justify-content: space-evenly;
   background-color: rgb(29, 29, 29);
   padding: 70px 0;
+}
+.footer .chatbot {
+  width: 390px;
+}
+.footer .unilab {
+  width: 390px;
 }
 .footer .figure5 {
   position: absolute;
@@ -332,26 +435,22 @@
   font-family: "Noto Sans Georgian", sans-serif;
   font-weight: 400;
 }
-.footer .contact div {
+.footer .contact .contact-flex {
   display: flex;
   margin-top: 35px;
 }
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  list-style: none;
+.footer .contact .contact-flex div {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
 }
-
-html {
-  scroll-behavior: smooth;
+.footer .contact .contact-flex div img {
+  position: relative;
 }
-
-body {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../../../assets/images/background.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+.footer .contact .contact-flex div:hover img {
+  filter: hue-rotate(10deg) brightness(0.7) contrast(1.4);
+}
+.footer .contact .contact-flex div:hover p {
+  font-weight: 700;
 }/*# sourceMappingURL=style.css.map */
