--- a/assets/styles/scss/components/_footer.scss
+++ b/assets/styles/scss/components/_footer.scss
@@ -5,19 +5,41 @@
     justify-content: space-evenly;
     background-color: rgba(29, 29, 29, 1);
     padding: 70px 0;
-
+    @include laptop {
+        margin-top: 600px;
+    }
+    @include break(1100px) {
+        margin-top: 350px;
+        padding: 50px 0;
+    }
     .chatbot{
         width: 390px;
+        @include laptop {
+            width: 300px;
+        }
+        @include break(1100px) {
+            width: 260px;
+        }
     }
 
     .unilab{
         width: 390px;
+        @include laptop {
+            width: 300px;
+        }
+        @include break(1100px) {
+            width: 260px;
+        }
     }
 
     .figure5{
-        position: absolute;
+        @include figure;
         left: 200px;
         top: -130px;
+        @include break(1100px){
+            top: -80px;
+            left: 100px;
+        }
     }
     h4{
         @include container-h(32px);
@@ -31,12 +53,27 @@
         .contact-flex{
             display: flex;
             margin-top: 35px;
+            @include laptop {
+                margin-top: 23px;
+            }
+            @include break(1100px) {
+                margin-top: 17px;
+            }
             div{
                 display: flex;
                 align-items: center;
                 column-gap: 20px;
+                @include laptop {
+                    column-gap: 15px;
+                }
                 img{
                     position: relative;
+                    @include laptop {
+                        width: 20px;
+                    }
+                    @include break(1100px) {
+                        width: 16px;
+                    }
                 }
                 &:hover{
                     img{
