--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -13,6 +13,7 @@ html{
 @import './mixin';
 @import './variables';
 @import './font';
+@import './media';
 @import './components/header';
 @import './components/main';
 @import './components/footer';
